--- a/2-QR Code Reader/index.html
+++ b/2-QR Code Reader/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>QR Code Reader</title>
-
+    <!-- Fonnt Awesome lib -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -12,6 +12,23 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <div class="wrapper">
+      <form action="#">
+        <input type="file" hidden />
+        <img src="" alt="qr-code" />
+        <div class="content">
+          <i class="fas fa-cloud-upload"></i>
+          <p>Upload QR Code to Scan</p>
+        </div>
+      </form>
+      <div class="detials">
+        <textarea disabled> </textarea>
+        <div class="buttons">
+          <button class="close">Close</button>
+          <button class="copy">Copy Text</button>
+        </div>
+      </div>
+    </div>
     <script src="./script.js" defer></script>
   </body>
 </html>
